syntax = "proto3";

import "google/protobuf/timestamp.proto";

package invoice;

option java_package = "com.perficient.proto.invoice";
option java_multiple_files = true;

message Invoice {
  int32 invoice_id = 1;
  bool result = 2;
  google.protobuf.Timestamp creation_date = 3;
}

message InvoiceRequest {
  int32 product_id = 1;
  string client = 2;
  double value = 3;
}

message InvoiceResponse {
  Invoice invoice = 1;
}

message InvoiceManyTimesRequest {
  int32 product_id = 1;
  string client = 2;
  double value = 3;
}

message InvoiceManyTimesResponse {
  Invoice invoice = 1;
}

message CreateInvoiceRequest {
  Invoice invoice = 1;
}

message CreateInvoiceResponse {
  Invoice invoice = 1;
}

service InvoiceService {
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse) {};

  //Unary
  rpc Invoice(InvoiceRequest) returns (InvoiceResponse) {};

  //Server stream
  rpc InvoiceManyTimesServer(InvoiceManyTimesRequest) returns (stream InvoiceManyTimesResponse){};
}